--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p class="contentdetail">
             Unlocking the Power of AI for Your Website: A Comprehensive Guide
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="firstbutton" href="#"><span>Learn more</span></a>
         </li>
         <li class="contenttwo">
           <div class="contentnumber">02</div>
@@ -31,7 +31,7 @@
           <p class="contentdetail">
             Unlocking the Power of AI for Your Website: A Comprehensive Guide
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="firstbutton" href="#"><span>Learn more</span></a>
         </li>
         <li class="contentthree">
           <div class="contentnumber">03</div>
@@ -39,7 +39,7 @@
           <p class="contentdetail">
             Enhancing Your Website's User Interface(UI) with Effective Design
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="firstbutton" href="#"><span>Learn more</span></a>
         </li>
         <li class="contentfour">
           <div class="contentnumber">04</div>
@@ -47,7 +47,7 @@
           <p class="contentdetail">
             Unlocking the Power of AI for Your Website: A Comprehensive Guide
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="secondbutton" href="#"><span>Learn more</span></a>
         </li>
         <li class="contentfive">
           <div class="contentnumber">05</div>
@@ -57,7 +57,7 @@
           <p class="contentdetail">
             Unlocking the Power of AI for Your Website: A Comprehensive Guide
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="thirdbutton" href="#"><span>Learn more</span></a>
         </li>
         <li class="contentsix">
           <div class="contentnumber">06</div>
@@ -65,7 +65,7 @@
           <p class="contentdetail">
             Unlocking the Power of AI for Your Website: A Comprehensive Guide
           </p>
-          <a href="#"><span>Learn more</span></a>
+          <a class="thirdbutton" href="#"><span>Learn more</span></a>
         </li>
       </ul>
     </div>
